@@ -1,2 +1,1 @@
---sun-misc-unsafe-memory-access=allow
 --enable-native-access=ALL-UNNAMED
